[gd_scene load_steps=9 format=3 uid="uid://dp11by0n57dvp"]

[ext_resource type="Script" path="res://resources/tools/3d_items/3d_item.gd" id="1_sx2s0"]
[ext_resource type="Script" path="res://resources/tools/finite_state_machine.gd" id="2_nacfm"]
[ext_resource type="Script" path="res://resources/tools/3d_items/3d_idle_state.gd" id="3_guxvc"]
[ext_resource type="Script" path="res://resources/tools/3d_items/3d_clicked_state.gd" id="4_bub3y"]
[ext_resource type="Script" path="res://resources/tools/3d_items/3d_dragging_state.gd" id="5_wgiec"]
[ext_resource type="Script" path="res://resources/tools/3d_items/3d_dropped_state.gd" id="6_rkbf7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tqg3q"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mfknb"]
size = Vector3(2, 2, 2)

[node name="Item" type="Node3D"]
script = ExtResource("1_sx2s0")

[node name="ItemSprite" type="Sprite3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ItemAnimations" type="AnimatedSprite3D" parent="."]
sprite_frames = SubResource("SpriteFrames_tqg3q")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_mfknb")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("2_nacfm")
state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("3_guxvc")

[node name="ClickedState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animationPlayer")]
script = ExtResource("4_bub3y")
animationPlayer = NodePath("../../AnimationPlayer")

[node name="DraggingState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("5_wgiec")

[node name="DroppedState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_rkbf7")

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
